# WEB_HW_10

./: pyproject.toml
hw_10_project/: manage.py
hw_10_project/hw_10_project/: asgi.py  settings.py  urls.py  wsgi.py
hw_10_project/quotes/: urls.py  utils.py  views.py
hw_10_project/quotes/migrations/static/quotes/: style.css
hw_10_project/quotes/templates/quotes/: base.html  index.html
hw_10_project/utils/: add_quotes_to_mongo.py  authors.json
