[tool.poetry]
name = "web-hw-10"
version = "0.1.0"
description = ""
authors = ["m0wgli <rodiontiutiunyk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_hw_10"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pymongo = "^4.5.0"
psycopg2-binary = "^2.9.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
